--- a/src/app/dashboard/location/location.component.css
+++ b/src/app/dashboard/location/location.component.css
@@ -7,28 +7,6 @@
     transition: 0.5s all;
 }
 
-.form-control {
-    display: block;
-    width: 110%;
-    height: calc(1.5em + 0.75rem + 2px);
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #495057;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 1px solid #ced4da;
-    border-radius: 0.25rem;
-    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
-
-.col {
-    flex-basis: 0;
-    flex-grow: 1;
-    max-width: 15%;
-}
-
 .table-container {
     overflow-x: scroll;
     box-shadow: 0px 0px 20px 5px rgba(200, 200, 200, 0.69);
@@ -52,6 +30,15 @@
     background-color: #e8e8e8;
 }
 
+.normal {
+    height: 16px;
+    margin-left: 3px;
+}
+
+.super-hot {
+    height: 20px;
+}
+
 .table th {
     padding-top: 12px;
     padding-bottom: 12px;
@@ -61,13 +48,55 @@
     color: white;
 }
 
-.user-class {
-    margin-left: 47px;
-    margin-top: 120px;
+.abc {
+    overflow-x: hidden;
 }
 
-.card-body {
-    padding: 0px;
+.dropbtn {
+    background-color: #38baa2;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+}
+
+.inventory {
+    margin-left: 47px;
+    margin-top: 120px;
+    width: 100%;
 }
 
 .fa {
@@ -81,7 +110,6 @@
 }
 
 .btn {
-    margin-left: 8px;
     width: 100px;
     font-size: 14px;
     background-color: #38baa2;
@@ -89,32 +117,62 @@
     border: 1px solid transparent;
 }
 
+.btn-container {
+    margin-left: auto;
+    margin-right: 12px;
+}
+.btn-container button {
+    margin-left: 10px;
+}
+
+.form-control {
+    height: calc(1.5em + 0.75rem + 2px);
+    padding: 1.1rem 0.75rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+ng-select, .form-control {
+    font-size: 0.8rem;
+    font-weight: 400;
+}
+
+.form-control-borderless {
+    border: none;
+    border: 1px solid whitesmoke;
+}
+
 @media only screen and (max-width: 1650px) {
-    .user-class {
+    .inventory {
         margin-left: 50px;
     }
 }
 
 @media only screen and (min-width: 1200px) and (max-width: 1400px) {
-    .user-class {
+    .inventory {
         margin-left: 80px;
     }
 }
 
 @media only screen and (max-width: 1200px) {
-    .user-class {
+    .inventory {
         margin-left: 100px;
+        overflow-x: auto;
     }
 }
 
 @media only screen and (max-width: 1100px) {
-    .user-class {
+    .inventory {
         margin-left: 120px;
     }
 }
 
 @media only screen and (max-width: 992px) {
-    .user-class {
+    .inventory {
         margin-left: -80px;
     }
 }
